syntax = "proto3";

package customer_v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "customer_service/pkg/grpc/customer_v1;customer_v1";

message Customer {
  int64 id = 1;
  string name = 2;
  string phone = 3;
  string passport = 4;
  google.protobuf.Timestamp created_at = 5;
}

service CustomerService {
  rpc NewCustomer (NewCustomerRequest) returns (NewCustomerResponse) {
    option (google.api.http) = {
      post: "/v1/customers"
      body: "*"
    };
  }
  rpc RemoveCustomer (RemoveCustomerRequest) returns (RemoveCustomerResponse) {
    option (google.api.http) = {
      delete: "/v1/customers/{id}"
    };
  }
  rpc UpdateCustomer (UpdateCustomerRequest) returns (UpdateCustomerResponse) {
    option (google.api.http) = {
      put: "/v1/customers/{id}"
      body: "*"
    };
  }
}

message NewCustomerRequest {
  string name = 1;
  string phone = 2;
  string passport = 3;
}

message NewCustomerResponse {
  Customer customer = 1;
}

message RemoveCustomerRequest {
  int64 id = 1;
}

message RemoveCustomerResponse {
  bool success = 1;
}

message UpdateCustomerRequest {
  int64 id = 1;
  string name = 2;
  string phone = 3;
  string passport = 4;
}

message UpdateCustomerResponse {
  bool success = 1;
}